@@ -2,6 +2,8 @@ Nutch Change Log
  
 Nutch Current Development 1.10-SNAPSHOT
 
+* NUTCH-1854 bin/crawl fails with a parsing fetcher (Asitang Mishra via snagel)
+
 * NUTCH-1989 Handling invalid URLs in CommonCrawlDataDumper (Giuseppe Totaro via mattmann)
 
 * NUTCH-1988 Make nested output directory dump optional (Michael Joyce via mattmann)
@@ -12,7 +14,7 @@ Nutch Current Development 1.10-SNAPSHOT
 
 * NUTCH-1906 Typo in CrawlDbReader command line help (Michael Joyce via mattmann)
 
-* NUTCH-1911 Imeprove DomainStatistics tool command line parsing (Michael Joyce via mattmann)
+* NUTCH-1911 Improve DomainStatistics tool command line parsing (Michael Joyce via mattmann)
 
 * NUTCH-1981 Upgrade to icu4j 55.1 (Marko Asplund via snagel)
 
